--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@emailjs/nodejs": "^5.0.2",
+    "aos": "^2.3.4",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
